--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "type": "module",
   "workspaces": [
-    "examples/*"
+    "examples/*",
+    "src"
   ],
   "scripts": {
     "build": "tsc",
     "build:examples": "yarn workspaces foreach --all --include \"examples/*\" run build",
     "clean": "rimraf node_modules && yarn clean:dbs",
     "clean:dbs": "rimraf *.db3* ||:",
-    "dev": "cd examples/xmtp-gm && tsx --env-file ../../.env --watch index.ts",
+    "dev": "tsx --env-file .env --watch src/index.ts",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "gen:keys": "tsx scripts/generateKeys.ts",
@@ -25,31 +26,35 @@
   "dependencies": {
     "@coinbase/agentkit": "^0.8.2",
     "@coinbase/agentkit-langchain": "^0.3.0",
-    "@langchain/core": "^0.3.58",
-    "@langchain/langgraph": "^0.3.3",
-    "@langchain/openai": "^0.5.13",
-    "@xmtp/node-sdk": "2.1.0",
+    "@langchain/core": "^0.3.61",
+    "@langchain/langgraph": "^0.3.5",
+    "@langchain/openai": "^0.5.16",
+    "@xmtp/content-type-primitives": "^2.0.2",
+    "@xmtp/content-type-transaction-reference": "^2.0.2",
+    "@xmtp/content-type-wallet-send-calls": "^2.0.0",
+    "@xmtp/node-sdk": "3.0.1",
+    "@xmtp/xmtp-js": "^13.0.4",
     "ethers": "^6.14.4",
     "uint8arrays": "^5.1.0",
-    "viem": "^2.22.17",
-    "zod": "^3.25.64"
+    "viem": "^2.31.6",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.6",
-    "@eslint/js": "^9.19.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.13.0",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "globals": "^15.14.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-packagejson": "^2.5.8",
+    "@eslint/compat": "^1.3.1",
+    "@eslint/js": "^9.30.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
+    "@types/eslint__js": "^9.14.0",
+    "@types/node": "^24.0.7",
+    "eslint": "^9.30.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "globals": "^16.2.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-packagejson": "^2.5.17",
     "rimraf": "^6.0.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.22.0"
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.0"
   },
   "packageManager": "yarn@4.6.0",
   "engines": {
