feat: update application core with new architecture

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,9 +1,24 @@
-WALLET_KEY= # the private key for the wallet
-ENCRYPTION_KEY= # the encryption key for the wallet
-# public key is 
-
+# Network Configuration
 NETWORK_ID=base-mainnet
-OPENAI_API_KEY= # the OpenAI API key  
-CDP_API_KEY_ID= # the ID of the CDP API key
-CDP_API_KEY_SECRET= # the secret for the CDP API key
-XMTP_ENV=dev # local, dev, production 
+SOCKET_PORT=3001
+FRONTEND_URL=http://localhost:3000
+
+# Coinbase Developer Platform Keys
+CDP_API_KEY_ID=your_cdp_api_key_id_here
+CDP_API_KEY_SECRET=your_cdp_api_key_secret_here
+
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Wallet Configuration (Optional - will be generated if not provided)
+WALLET_SECRET=your_secure_wallet_secret_here
+
+# Payment Configuration
+PAYMASTER_URL=https://api.developer.coinbase.com/rpc/v1/base/ysRNUL0e5tLaH0gTgLkD5BA8I8go4AGO
+
+# Logging
+LOG_LEVEL=info
+
+# Contract Addresses (Base Mainnet)
+COLLABRA_CHAIN_FACTORY_ADDRESS=0xfB250Bf4c8F9E80fEE15FF978ad1a6289dED9C2f
+USDC_ADDRESS=0x833589fCD6eDb6E08f4c7C32D4f71b54bda02913
