--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "dependencies": {
     "@coinbase/agentkit": "^0.8.2",
     "@coinbase/agentkit-langchain": "^0.3.0",
+    "@langchain/aws": "^0.1.11",
     "@langchain/core": "^0.3.61",
     "@langchain/langgraph": "^0.3.5",
-    "@langchain/openai": "^0.5.16",
     "@xmtp/content-type-primitives": "^2.0.2",
     "@xmtp/content-type-transaction-reference": "^2.0.2",
     "@xmtp/content-type-wallet-send-calls": "^2.0.0",
